# wall_display_cloud

./: .gitignore  README.md
client/wall_display/: Dockerfile  README.md  autostart  device_setup.sh  nginx.conf  package-lock.json  package.json
client/wall_display/src/: App.css  App.tsx  index.css  weather.json
client/wall_display/src/components/calendar/: Calendar.css  Calendar.tsx
client/wall_display/src/components/clock/: Clock.css  Clock.tsx
client/wall_display/src/components/news/: News.css  News.tsx
client/wall_display/src/components/weather/: Weather.css  Weather.tsx
client_simple/: index.html  index.js
deployment/: display-backend-deployment.yml  display-backend-service.yml  display-frontend-deployment.yml  display-frontend-ingress.yml  display-frontend-service.yml
server/wall_display/: Cargo.toml  Dockerfile
server/wall_display/src/: main.rs
